# facturama-python-sdk

./: .gitignore  LICENSE  README-en.md  README.md  README.txt  pyproject.toml  requirements.txt  setup.py  test_api_multi.py  test_api_web.py  test_withholdings_tp.py
facturama/: __init__.py
tests/: __init__.py  branch.py  catalogs.py  cfdi.py  cfdiMulti.py  csds.py  csdsMulti.py  customers.py  products.py
